# keda-oracle-scaler

./: Cargo.toml  Dockerfile  README.md  artifacthub-pkg.yml  build.rs
.github/: dependabot.yml
proto/: externalscaler.proto
src/: main.rs
