[package]
name = "keda-oracle-scaler"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
oracle = "0.5"
protobuf = "3"
grpc = "*"
grpc-protobuf = "*"
tonic = { version = "0.7", features = ["compression","prost"] }
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
rand = "0.8"
env-var = "1"
once_cell = "1"

[build-dependencies]
protoc-rust-grpc = "0.8.2"
tonic-build = { version = "0.7", features = ["prost", "compression"] }