[package]
name = "keda-oracle-scaler"
version = "18.0.0"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
keywords = ["keda","kubernetes","oracle"]
repository = "https://github.com/apimeister/keda-oracle-scaler"
description = "Implements an external Scaler for KEDA for Oracle databases."

[dependencies]
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
oracle = "0.5"
protobuf = "3"
grpc = "0.8"
grpc-protobuf = "0.8"
tonic = { version = "0.9", features = ["gzip","prost"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
rand = "0.8"
env-var = "1"
once_cell = "1"

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }